BusOne02/src/objects/Formulary_Products_vod__c.object
<CustomObject>
    <description>To display products in the formulary viewer, they must be entered into Formulary Product. Formulary product is referred to by Benefit Design Lines. Formulary product must be loaded before Benefit Design Lines.</description>
    <fields>
        <fullName>BOT_Formulary_Product_ID__c</fullName>
        <description>It is created by BusiessOne technologies. It is used to store BOT Drug ID.</description>
        <externalId>true</externalId>
        <label>Formulary Product ID</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BOT_Is_BOT_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created by BusinessOne technologies. This field is used to identify the record created by BOT or Veeva.</description>
        <label>Is BOT Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product belongs to a competitor. If not, the product is assumed to be a company product and shows up in bold in the formulary viewer.</description>
        <label>Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID is only used for data loading.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Market_vod__c</fullName>
        <description>Market (such as Cholesterol Reducer) that this product belongs to.  This field is used as a filter in the formulary viewer.</description>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Immunology</fullName>
                </value>
                <value>
                    <fullName>Multiple Sclerosis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Formulary Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Competitor_vod__c</columns>
        <columns>Market_vod__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Drug Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formulary Products</pluralLabel>
    <recordTypes>
        <fullName>BOT_Formulary_Product</fullName>
        <active>true</active>
        <description>It is created by BusinessOne Technologies Inc and used to store BOT Drug level records.</description>
        <label>BOT_Formulary Product</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>